--- a/dpc-web/public/404.html
+++ b/dpc-web/public/404.html
@@ -48,7 +48,7 @@
     <section class="ds-l-container ds-u-padding-top--7 ds-u-margin-bottom--7" id="main">
       <div class="ds-u-measure--wide">
         <h2>Oops! This page doesn’t exist!</h2>
-        <p>The link might be broken, or the page may have been removed.</p>
+        <p>The link might be broken or the page may have been removed.</p>
         <p>
           <a href="/" class="ds-c-button ds-c-button--primary ds-c-button--big">Back to home</a>
         </p>
